updated again index.html

--- a/week 2/index.html
+++ b/week 2/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1 style="font-size:60px;">Heading 1</h1>
-
-<p>You can change the size of a heading with the style attribute, using the font-size property.</p>
-
-</body>
-</html>
+<link href="style.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card user-card">
+                <div class="card-header">
+                    <h5>Profile</h5>
+                </div>
+                <div class="card-block">
+                    <div class="user-image">
+                        <img src="dawg.jpg" alt="User-Profile-Image" class="img-radius">
+                    </div>
+                    <h6 class="f-w-600 m-t-25 m-b-10">Jan Michael B. Villeza</h6>
+                    <p class="text-muted">Active | Male | Born 03.12.2003</p>
+                    <hr>
+                    <p class="text-muted m-t-15">Activity Level: 87%</p>
+                    <ul class="list-unstyled activity-leval">
+                        <li class="active"></li>
+                        <li class="active"></li>
+                        <li class="active"></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <div class="bg-c-blue counter-block m-t-10 p-20">
+                        <div class="column">
+                            <div class="row-4">
+                                <i class="fa fa-comment"></i>
+                                <p>1256</p>
+                            </div>
+                            <div class="row-4">
+                                <i class="fa fa-user"></i>
+                                <p>8562</p>
+                            </div>
+                            <div class="row-4">
+                                <i class="fa fa-suitcase"></i>
+                                <p>189</p>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="m-t-15 text-muted">Hello, I'm Jan Michael B. Villeza, currently I am 19 years old and will be turning 20 this coming December 3.
+                        I am taking the course Computer Science specializing in Software Systems, I am in my 2nd year so far and hoping to make it out of college alive.
+                        One of the goals of my life is to be able to live a comfortable live and hopefully visit or even live in Japan some day.
+                    </p>
+                    <hr>
+                    <div class="row justify-content-center user-social-link">
+                        <div class="col-auto"><a href="https://www.facebook.com/janmichael.villeza/"><i class="fa fa-facebook text-facebook"></i></a></div>
+                        <div class="col-auto"><a href="https://x.com/jmvlza?s=09e"><i class="fa fa-twitter text-twitter"></i></a></div>
+                        <div class="col-auto"><a href="https://instagram.com/jmvlza?igshid=MzMyNGUyNmU2YQ=="><i class="fa fa-instagram text-instagram"></i></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
