--- a/week3/webprog.html
+++ b/week3/webprog.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <title>Profile Card</title>
+    </head>
+    <body>
+        <div class="page-container">
 <link href="style.css" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
@@ -23,34 +32,50 @@
                         <li></li>
                         <li></li>
                     </ul>
-                    <div class="bg-c-blue counter-block m-t-10 p-20">
-                        <div class="column">
-                            <div class="row-4">
+                    <div class="bg-c-blue counter-block m-t-10 p-20 i">
+                        <div class="row">
+                            <div class="col-4 text-right">
                                 <i class="fa fa-comment"></i>
                                 <p>1256</p>
                             </div>
-                            <div class="row-4">
+                            <div class="col-4 text-right">
                                 <i class="fa fa-user"></i>
                                 <p>8562</p>
                             </div>
-                            <div class="row-4">
+                            <div class="col-4 text-right">
                                 <i class="fa fa-suitcase"></i>
                                 <p>189</p>
                             </div>
                         </div>
                     </div>
-                    <p class="m-t-15 text-muted">Hello, I'm Jan Michael B. Villeza, currently I am 19 years old and will be turning 20 this coming December 3.
+                    
+                    <p class="m-t-15 text-muted">Hello, I'm Jan Michael B. Villeza, currently I am 20 years old and will be turning 21 next December 3.
                         I am taking the course Computer Science specializing in Software Systems, I am in my 2nd year so far and hoping to make it out of college alive.
                         One of the goals of my life is to be able to live a comfortable live and hopefully visit or even live in Japan some day.
                     </p>
                     <hr>
                     <div class="row justify-content-center user-social-link">
-                        <div class="col-auto"><a href="https://www.facebook.com/janmichael.villeza/"><i class="fa fa-facebook text-facebook"></i></a></div>
-                        <div class="col-auto"><a href="https://x.com/jmvlza?s=09e"><i class="fa fa-twitter text-twitter"></i></a></div>
-                        <div class="col-auto"><a href="https://instagram.com/jmvlza?igshid=MzMyNGUyNmU2YQ=="><i class="fa fa-instagram text-instagram"></i></a></div>
-                    </div>
+                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                            <a href="https://www.facebook.com/janmichael.villeza/">
+                                <i class="fa fa-facebook text-facebook"></i>
+                            </a>
+                        </div>
+                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                            <a href="https://x.com/jmvlza?s=09e">
+                                <i class="fa fa-twitter text-twitter"></i>
+                            </a>
+                        </div>
+                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                            <a href="https://instagram.com/jmvlza?igshid=MzMyNGUyNmU2YQ==">
+                                <i class="fa fa-instagram text-instagram"></i>
+                            </a>
+                        </div>
+                    </div>                                                                    
                 </div>
             </div>
         </div>
 	</div>
 </div>
+</div>
+</body>
+</html>
