centralized some stuff

--- a/week3/index.html
+++ b/week3/index.html
@@ -54,23 +54,25 @@
                         One of the goals of my life is to be able to live a comfortable live and hopefully visit or even live in Japan some day.
                     </p>
                     <hr>
-                    <div class="row justify-content-center user-social-link">
-                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                    <div class="container">
+                        <div class="row justify-content-center user-social-link">
+                          <div class="col-4 text-center d-flex flex-column align-items-center">
                             <a href="https://www.facebook.com/janmichael.villeza/">
-                                <i class="fa fa-facebook text-facebook"></i>
+                              <i class="fa fa-facebook text-facebook"></i>
                             </a>
-                        </div>
-                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                          </div>
+                          <div class="col-4 text-center d-flex flex-column align-items-center">
                             <a href="https://x.com/jmvlza?s=09e">
-                                <i class="fa fa-twitter text-twitter"></i>
+                              <i class="fa fa-twitter text-twitter"></i>
                             </a>
-                        </div>
-                        <div class="col-4 text-center d-flex flex-column align-items-center">
+                          </div>
+                          <div class="col-4 text-center d-flex flex-column align-items-center">
                             <a href="https://instagram.com/jmvlza?igshid=MzMyNGUyNmU2YQ==">
-                                <i class="fa fa-instagram text-instagram"></i>
+                              <i class="fa fa-instagram text-instagram"></i>
                             </a>
+                          </div>
                         </div>
-                    </div>                                                                    
+                      </div>                                                                    
                 </div>
             </div>
         </div>
