--- a/week3/index.html
+++ b/week3/index.html
@@ -1,83 +1,64 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <title>Profile Card</title>
-    </head>
-    <body>
-        <div class="page-container">
-<link href="style.css" rel="stylesheet">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card user-card">
-                <div class="card-header">
-                    <h5>Profile</h5>
-                </div>
-                <div class="card-block">
-                    <div class="user-image">
-                        <img src="dawg.jpg" alt="User-Profile-Image" class="img-radius">
-                    </div>
-                    <h6 class="f-w-600 m-t-25 m-b-10">Jan Michael B. Villeza</h6>
-                    <p class="text-muted">Active | Male | Born 03.12.2003</p>
-                    <hr>
-                    <p class="text-muted m-t-15">Activity Level: 87%</p>
-                    <ul class="list-unstyled activity-leval">
-                        <li class="active"></li>
-                        <li class="active"></li>
-                        <li class="active"></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <div class="bg-c-blue counter-block m-t-10 p-20 i">
-                        <div class="row">
-                            <div class="col-4 text-right">
-                                <i class="fa fa-comment"></i>
-                                <p>1256</p>
-                            </div>
-                            <div class="col-4 text-right">
-                                <i class="fa fa-user"></i>
-                                <p>8562</p>
-                            </div>
-                            <div class="col-4 text-right">
-                                <i class="fa fa-suitcase"></i>
-                                <p>189</p>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <p class="m-t-15 text-muted">Hello, I'm Jan Michael B. Villeza, currently I am 20 years old and will be turning 21 next December 3.
-                        I am taking the course Computer Science specializing in Software Systems, I am in my 2nd year so far and hoping to make it out of college alive.
-                        One of the goals of my life is to be able to live a comfortable live and hopefully visit or even live in Japan some day.
-                    </p>
-                    <hr>
-                    <div class="container">
-                        <div class="row justify-content-center user-social-link">
-                          <div class="col-4 text-center d-flex flex-column align-items-center">
-                            <a href="https://www.facebook.com/janmichael.villeza/">
-                              <i class="fa fa-facebook text-facebook"></i>
-                            </a>
-                          </div>
-                          <div class="col-4 text-center d-flex flex-column align-items-center">
-                            <a href="https://x.com/jmvlza?s=09e">
-                              <i class="fa fa-twitter text-twitter"></i>
-                            </a>
-                          </div>
-                          <div class="col-4 text-center d-flex flex-column align-items-center">
-                            <a href="https://instagram.com/jmvlza?igshid=MzMyNGUyNmU2YQ==">
-                              <i class="fa fa-instagram text-instagram"></i>
-                            </a>
-                          </div>
-                        </div>
-                      </div>                                                                    
-                </div>
-            </div>
+<!DOCTYPE html>
+<head>
+  <title>Basic Layout</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="/assests/favicon.ico">
+  <link href="style.css" rel="stylesheet">
+  <style>
+
+  </style>
+</head>
+
+<body>
+  <div class="wrapper">
+    <section>
+      <div class="container">
+        <div class="header">
+            <img src="nightsky.png" alt = "header">
         </div>
-	</div>
-</div>
-</div>
+        
+        <div class="content-title">
+          <div class="title">My Personal Website</div>
+        </div>
+        <div class="content-large">
+          <img src="sumeru.png" alt = "sumeru">
+        </div>
+        <div class="content-small">
+          <div class="Sumeru">Alhaitham</div>
+        </div>
+        <div class="content-small2">
+          <img src="transparentalhaithamheader2.png" alt="alhaithamheader">
+        </div>
+        <div class="content-small3">
+         <img src="alhaithamgif.gif" alt="alhaithamgif">
+         </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container2">
+        <div class="content-horizontal">
+          <img src="focalores.gif" alt="focalores">
+        </div>
+        <div class="content-large2">large2</div>
+        <div class="content-large2a">large2a</div>
+        <div class="content-medium2">medium2</div>
+        <div class="content-medium2a">medium2a</div>
+        <div class="content-smallpage2">smallpage2</div>
+        <div class="content-smallpage2a">smallpage2a</div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container3">
+        <div class ="content-large3">large3</div>
+        <div class ="content-medium3">medium3</div>
+        <div class ="content-medium3a">medium3a</div>
+        <div class ="content-medium3b">medium3b</div>
+        <div class ="content-horizontal3">horizontal3</div>
+        <div class ="content-horizontal3a">horizontal3a</div>
+      </div>
+    </section>
+  </div>
 </body>
-</html>
