--- a/week5/index.html
+++ b/week5/index.html
@@ -121,6 +121,7 @@
     </section>
   </div>
   
+  <!--js whereto-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script src="app.js"></script>
