--- a/week5/index.html
+++ b/week5/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
 
   </style>
@@ -36,23 +36,8 @@
                     adipisicing elit. Repudiandae magnam repellat commodi, quibusdam possimus illo a, accusamus itaque 
                     voluptatibus deleniti magni corrupti quos? Excepturi dolores provident expedita harum error consequuntur.
                   </p>
-                  <p>
-                    <a href="https://www.github.com/" 
-                    class="fa fa-github"
-                    target="_blank"
-                    rel="no-referrer"
-                    ></a>
-                  </p>
-                  <p>
-                    <a href="https://www.linkedin.com/in/jan-michael-villeza-3b991b248/">
-                    <img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">
-                    </a>
-                  </p>
-                  <p>
-                    <a href="https://www.w3schools.com">
-                    <img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">
-                    </a>
-                  </p>
+                  <div id="skills-container"></div>
+                  <div class="social-media"></div>
               </div>
           </div>
       </div>
@@ -61,14 +46,14 @@
     <section>
       <div class="container">
         <div class="header">
-            <img src="nightsky.png" alt = "header">
+            <img src="./images/nightsky.png" alt = "header">
         </div>
         
         <div class="content-title">
           <div class="title">BREAKING NEWS</div>
         </div>
         <div class="content-large">
-          <img src="aircon.jpg" alt = "aircon">
+          <img src="./images/aircon.jpg" alt = "aircon">
         </div>
         <div class="content-small">
           <div class="Sumeru">
@@ -76,10 +61,10 @@
           </div>
         </div>
         <div class="content-small2">
-          <img src="transparentalhaithamheader2.png" alt="alhaithamheader">
+          <img src="./images/transparentalhaithamheader2.png" alt="alhaithamheader">
         </div>
         <div class="content-small3">
-         <img src="car.jpg" alt="car">
+         <img src="./images/car.jpg" alt="car">
          </div>
       </div>
     </section>
@@ -87,10 +72,10 @@
     <section>
       <div class="container2">
         <div class="content-horizontal">
-          <img src="horizontal.jpg" alt="horizontal">
+          <img src="./images/horizontal.jpg" alt="horizontal">
         </div>
         <div class="content-large2">
-          <img src="ground.jpg" alt="shuttle">
+          <img src="./images/ground.jpg" alt="shuttle">
         </div>
         <div class="content-medium2">
           <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h1>
@@ -99,7 +84,7 @@
         </div>
         <div class="content-medium2a">medium2a</div>
         <div class="content-smallpage2">
-          <img src="leaves.jpg" alt="leaves">
+          <img src="./images/leaves.jpg" alt="leaves">
         </div>
         <div class="content-smallpage2a">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -120,8 +105,8 @@
       </div>
     </section>
   </div>
-  
-  <!--js whereto-->
+
+  <script src="test.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script src="app.js"></script>
